fix 08 maybe the stretch issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@ html, body{
 	background-image:url('../images/floralPatternBlue-01.jpg');
 	background-repeat:repeat;
 	width:100%;
-	max-height:640px;
+	max-height:700px;
 	height:100%;
 
 	margin:0px;
@@ -196,6 +196,6 @@ footer p a{
 	text-decoration: none
 }
 footer p a:hover{
-	color:green;
+	color:#33b3b4;
 }
 /*end*/
